<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LoginMainContainer">
    <LinearLayout style="@style/LoginInnerContainer">
        <ImageView android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/mainlogo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"/>
        <Button style="@style/LargeLoginButton"
            android:text="@string/login_fb"
            android:layout_marginBottom="2dp"
            android:id="@+id/btn_login_fb"
            android:onClick="loginWithFacebook"/>
        <TextView style="@style/SmallLoginText"
            android:text="@string/login_or"
            android:gravity="center"
            android:layout_marginBottom="10dp"/>
        <EditText style="@style/LargeLoginEditText"
            android:hint="@string/login_email"
            android:id="@+id/ed_login_email"
            android:inputType="textEmailAddress"/>
        <EditText style="@style/LargeLoginEditText"
            android:inputType="textPassword"
            android:hint="@string/login_password"
            android:id="@+id/ed_login_password"/>
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <Button style="@style/SmallLoginButton"
	            android:text="@string/login_signup"
	            android:id="@+id/btn_login_signup"
	            android:onClick="signUp"/>
            <Button style="@style/SmallLoginButton"
	            android:text="@string/login_login"
	            android:id="@+id/btn_login_login"
	            android:onClick="login"/>
        </LinearLayout>
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot"
            android:gravity="center_vertical|right"
            android:clickable="true"
            android:onClick="forgotPassword"/>
    </LinearLayout>
</RelativeLayout>
